[package]
name = "blockcounter-utils"
version = "0.1.1"
authors = ["Cássio Kirch <cassio@kirch7.com>"]
build = "build.rs"
description = "Utilities to handling blocks in files."
keywords = ["gnuplot", "text", "file"]
categories = ["science", "command-line-utilities", "text-processing"]
documentation = "https://github.com/kirch7/blockcounter-utils/blob/master/README.md"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kirch7/blockcounter-utils"

[[bin]]
name = "blockcounter"
path = "blockcounter/main.rs"

[[bin]]
name = "showblock"
path = "showblock/main.rs"

[dependencies]
blockcounter = "0.3.2"
clap = { version = "2.32.0", features = ["yaml"] }

[build-dependencies]
linked-hash-map = "0.5.0"
yaml-rust = "0.4.0"

[target.'cfg(not(windows))'.dependencies]
isatty = "0.1.8"

[badges]
travis-ci = { repository = "kirch7/blockcounter-utils" }
appveyor = { repository = "kirch7/blockcounter-utils" }

[profile.dev]
opt-level        = 0
debug            = true
lto              = false
debug-assertions = true
codegen-units    = 1

[profile.release]
opt-level        = 3
debug            = false
lto              = true
debug-assertions = false
codegen-units    = 1

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
